alterando aliases e icones dos workspaces, configurando layout do teclado, externalizando proeprties do bumblebee

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -94,60 +94,63 @@ bindsym $mod+a focus parent
 
 bindsym $mod+x [urgent=latest] focus
 
-set $workspace1 "1:"
-set $workspace2 "2:"
-set $workspace3 "3:"
-set $workspace4 "4:"
-set $workspace5 "5:"
-set $workspace6 "6:"
-set $workspace7 "7:"
-set $workspace8 "8:"
-set $workspace9 "9:"
-set $workspace10 "10:"
+# workspace aliases
+set $w1 "1:&#xf198;"
+set $w2 "2:&#xf268;"
+set $w3 "3:&#xf121;"
+set $w4 "4:&#xf120;"
+set $w5 "5:&#xf1c0;"
+set $w6 "6:&#xf108;"
+set $w7 "7:&#xf108;"
+set $w8 "8:&#xf108;"
+set $w9 "9:&#xf108;"
+set $w10 "10:&#xf1bc;"
 
 # switch to workspace
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace $workspace4
-bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace $workspace7
-bindsym $mod+8 workspace $workspace8
-bindsym $mod+9 workspace $workspace9
-bindsym $mod+0 workspace $workspace10
+bindsym $mod+1 workspace $w1
+bindsym $mod+2 workspace $w2
+bindsym $mod+3 workspace $w3
+bindsym $mod+4 workspace $w4
+bindsym $mod+5 workspace $w5
+bindsym $mod+6 workspace $w6
+bindsym $mod+7 workspace $w7
+bindsym $mod+8 workspace $w8
+bindsym $mod+9 workspace $w9
+bindsym $mod+0 workspace $w10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace $workspace4
-bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace $workspace7
-bindsym $mod+Shift+8 move container to workspace $workspace8
-bindsym $mod+Shift+9 move container to workspace $workspace9
-bindsym $mod+Shift+0 move container to workspace $workspace10
+bindsym $mod+Shift+1 move container to workspace $w1
+bindsym $mod+Shift+2 move container to workspace $w2
+bindsym $mod+Shift+3 move container to workspace $w3
+bindsym $mod+Shift+4 move container to workspace $w4
+bindsym $mod+Shift+5 move container to workspace $w5
+bindsym $mod+Shift+6 move container to workspace $w6
+bindsym $mod+Shift+7 move container to workspace $w7
+bindsym $mod+Shift+8 move container to workspace $w8
+bindsym $mod+Shift+9 move container to workspace $w9
+bindsym $mod+Shift+0 move container to workspace $w10
 
 # workspace default monitors
-workspace $workspace1 output eDP-1
-workspace $workspace2 output HDMI-1
-workspace $workspace3 output HDMI-1
-workspace $workspace4 output HDMI-1
-workspace $workspace5 output HDMI-1
-workspace $workspace6 output HDMI-1
-workspace $workspace9 output HDMI-1
-workspace $workspace10 output HDMI-1
+workspace $w1 output eDP-1
+workspace $w2 output HDMI-1
+workspace $w3 output HDMI-1
+workspace $w4 output HDMI-1
+workspace $w5 output HDMI-1
+workspace $w6 output HDMI-1
+workspace $w7 output HDMI-1
+workspace $w8 output HDMI-1
+workspace $w9 output HDMI-1
+workspace $w10 output eDP-1 
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec /home/anderson/.config/i3/exit_menu
-bindsym $mod+Shift+d exec /home/anderson/.screenlayout/default.sh
+bindsym $mod+Shift+e exec ~/.config/i3/exit_menu
+bindsym $mod+Shift+d exec ~/.screenlayout/default.sh
 # lock
-bindsym $mod+Shift+x exec /home/anderson/.config/i3/i3lock-multimonitor/lock -i /home/anderson/Pictures/wallpaper.png
+bindsym $mod+Shift+x exec ~/.config/i3/i3lock-multimonitor/lock -i ~/Pictures/wallpaper.png
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -197,8 +200,8 @@ hide_edge_borders both
 bar {
 	font pango: MesloLGS Nerd Font 12
 	position top
-	strip_workspace_numbers yes
-	status_command ~/.config/i3/bumblebee-status/bumblebee-status -m  mpd pasink date time nic docker_ps  battery -p  nic.exclude="docker0,enp0s31f6,lo,vethf972f12" nic.format="{ssid}" pasink.right-click="pavucontrol"  -t iceberg-rainbow
+	# strip_workspace_numbers yes
+	status_command ~/.config/i3/bumblebee-status/bumblebee-status -m  mpd pasink date time nic docker_ps  battery -t black-white-custom 
 	colors {
 		background $bg-color
 		separator #757575
@@ -227,17 +230,19 @@ for_window [class="jetbrains-idea"] layout tabbed
 # launch polybar
 # exec_always --no-startup-id /home/anderson/.config/polybar/launch.sh
 
-exec_always --no-startup-id feh --bg-scale /home/anderson/Pictures/wallpaper.png
-exec_always --no-startup-id /home/anderson/.screenlayout/dual_screen.sh
+exec_always --no-startup-id setxkbmap -rules evdev -model pc105 -layout us -variant intl
+exec_always --no-startup-id feh --bg-scale ~/Pictures/wallpaper.png
+exec_always --no-startup-id ~/.screenlayout/dual_screen.sh
 
-exec --no-startup-id xrdb -merge /home/anderson/.Xresources
+exec --no-startup-id xrdb -merge ~/.Xresources
 exec --no-startup-id compton -f
 exec --no-startup-id franz
 exec --no-startup-id synclient VertScrollDelta=-113 HorizTwoFingerScroll=1
 
-assign [class="Franz"] $workspace1
-assign [class="Google-chrome"] $workspace2
-assign [class="jetbrains-idea"] $workspace3
+assign [class="Franz"] $w1
+assign [class="Google-chrome"] $w2
+assign [class="jetbrains-idea"] $w3
+assign [class="jetbrains-datagrip"] $w5
 
 gaps inner 15
 smart_gaps on
