adicionando dim nas janelas inativas

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -10,6 +10,7 @@ shadow-radius = 3;
 shadow-offset-x = 5;
 shadow-offset-y = 5;
 shadow-opacity = 0.7;
+inactive-dim = 0.2;
 
 shadow-exclude = [
  "! name~=''",
@@ -18,8 +19,6 @@ shadow-exclude = [
  "i:e:i3-frame",
  "n:e:Plank",
  "n:e:Docky",
- "g:e:Synapse",
- "g:e:Kupfer",
  "g:e:Conky",
  "n:w:Firefox",
  "n:w:*Chrome*",
