--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -28,10 +28,10 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/example]
+[bar/main_bar]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 35 
+height = 30 
 ;offset-x = 1%
 ;offset-y = 1%
 ;radius = 6.0
@@ -57,10 +57,10 @@ font-1 = FontAwesome:size=12;0
 
 modules-left =  i3
 modules-center = 
-modules-right = mpd pulseaudio wlan date battery powermenu 
+modules-right = mpd pulseaudio wlan date battery powermenu
 
 tray-position = right
-tray-padding = 3 
+tray-padding = 1 
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
@@ -75,7 +75,56 @@ scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
 cursor-click = pointer
-cursor-scroll = ns-resize
+cursor-scroll = pointer
+
+;[bar/aux_bar]
+;monitor = eDP-1 
+;width = 100%
+;height = 30 
+;offset-x = 1%
+;offset-y = 1%
+;radius = 6.0
+;fixed-center = false
+
+;background = ${colors.background}
+;foreground = ${colors.foreground}
+
+;line-size = 3
+;line-color = #f00
+
+;border-size = 4
+;border-color = #00000000
+
+;padding-left = 0
+;padding-right = 2
+
+;module-margin-left = 1
+;module-margin-right = 2
+
+;font-0 = MesloLGS Nerd Font:size=12;0
+;font-1 = FontAwesome:size=12;0
+
+;modules-left = i3
+;modules-center =
+;modules-right =
+
+;tray-position = right
+;tray-padding = 3
+;tray-background = #0063ff
+
+;wm-restack = bspwm
+;wm-restack = i3
+
+;override-redirect = true
+
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
+
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
+
+;cursor-click = pointer
+;cursor-scroll = ns-resize
 
 [module/xwindow]
 ;type = internal/xwindow
@@ -193,7 +242,7 @@ icon-play = 
 icon-pause = 
 icon-next =  
 
-label-song-maxlen = 25
+label-song-maxlen = 35
 label-song-ellipsis = true
 
 [module/xbacklight]
@@ -286,7 +335,7 @@ format-prefix = 
 ;format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #ffa000
 
-label = %time% %date%
+label = %time%  %date%
 
 [module/pulseaudio]
 type = internal/pulseaudio
