--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -77,36 +77,36 @@ scroll-down = i3wm-wsprev
 cursor-click = pointer
 cursor-scroll = pointer
 
-;[bar/aux_bar]
-;monitor = eDP-1 
-;width = 100%
-;height = 30 
+[bar/aux_bar]
+monitor = eDP-1 
+width = 100%
+height = 30 
 ;offset-x = 1%
 ;offset-y = 1%
 ;radius = 6.0
-;fixed-center = false
+fixed-center = false
 
-;background = ${colors.background}
-;foreground = ${colors.foreground}
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-;line-size = 3
-;line-color = #f00
+line-size = 3
+line-color = #f00
 
 ;border-size = 4
 ;border-color = #00000000
 
-;padding-left = 0
-;padding-right = 2
+padding-left = 0
+padding-right = 2
 
-;module-margin-left = 1
-;module-margin-right = 2
+module-margin-left = 1
+module-margin-right = 2
 
-;font-0 = MesloLGS Nerd Font:size=12;0
-;font-1 = FontAwesome:size=12;0
+font-0 = MesloLGS Nerd Font:size=12;0
+font-1 = FontAwesome:size=12;0
 
-;modules-left = i3
-;modules-center =
-;modules-right =
+modules-left = i3
+modules-center =
+modules-right =
 
 ;tray-position = right
 ;tray-padding = 3
@@ -120,11 +120,11 @@ cursor-scroll = pointer
 ;scroll-up = bspwm-desknext
 ;scroll-down = bspwm-deskprev
 
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
 
-;cursor-click = pointer
-;cursor-scroll = ns-resize
+cursor-click = pointer
+cursor-scroll = pointer 
 
 [module/xwindow]
 ;type = internal/xwindow
