--- a/.config/i3/config
+++ b/.config/i3/config
@@ -43,10 +43,10 @@ bindsym $mod+d exec rofi -show drun -theme solarized
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+# bindsym $mod+j focus left
+# bindsym $mod+k focus down
+# bindsym $mod+l focus up
+# bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -146,11 +146,7 @@ workspace $w10 output eDP-1
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec ~/.config/i3/exit_menu
 bindsym $mod+Shift+d exec ~/.screenlayout/default.sh
-# lock
-bindsym $mod+Shift+x exec ~/.config/i3/i3lock-multimonitor/lock -i ~/Pictures/wallpaper.png
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -178,17 +174,21 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-set $sysmenu "system:  [r]eload  [l]ogout  [p]oweroff  re[b]oot"
-bindsym $mod+Delete      mode $sysmenu
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+mode "$mode_system" {
+  bindsym l exec --no-startup-id ~/.config/i3/i3exit lock, mode "default"
+	bindsym e exec --no-startup-id ~/.config/i3/i3exit logout, mode "default"
+	bindsym s exec --no-startup-id ~/.config/i3/i3exit suspend, mode "default"
+	bindsym h exec --no-startup-id ~/.config/i3/i3exit hibernate, mode "default"
+	bindsym r exec --no-startup-id ~/.config/i3/i3exit reboot, mode "default"
+	bindsym Shift+s exec --no-startup-id ~/.config/i3/i3exit shutdown, mode "default"
 
-mode $sysmenu {
-  bindsym r         restart
-  bindsym l         exit
-	bindsym p         exec shutdown -P now
-	bindsym b         exec shutdown -r now
-	bindsym Return    mode "default"
-	bindsym Escape    mode "default"
+	# back to normal: Enter or Escape
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
 }
+
+bindsym $mod+l mode "$mode_system"
 
 bindsym $mod+Tab workspace back_and_forth
 
@@ -239,24 +239,23 @@ for_window [class="xpad"] floating enable
 for_window [class="Gnome-power-statistics"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [class="jetbrains-idea"] layout tabbed
-
-# launch polybar
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down 30 px
 
 exec_always --no-startup-id setxkbmap -rules evdev -model pc105 -layout us -variant intl
 exec_always --no-startup-id feh --bg-scale ~/Pictures/wallpaper.png
 exec_always --no-startup-id ~/.screenlayout/dual_screen.sh
-exec_always --no-startup-id franz
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 exec --no-startup-id i3-msg 'workspace $w10; append_layout ~/.config/i3/w10.json'
-exec --no-startup-id i3-msg 'workspace $w10; exec urxvt -name "tty-clock" -e tty-clock'
 exec --no-startup-id i3-msg 'workspace $w10; exec urxvt -e cava'
 exec --no-startup-id i3-msg 'workspace $w10; exec urxvt -e ncmpcpp -s playlist'
+exec --no-startup-id i3-msg 'workspace $w10; exec urxvt -name "tty-clock" -e tty-clock -c'
 exec --no-startup-id i3-msg 'workspace $w2;'
 exec --no-startup-id xrdb -merge ~/.Xresources
 exec --no-startup-id compton -f
 exec --no-startup-id synclient VertScrollDelta=-113 HorizTwoFingerScroll=1
 exec --no-startup-id blueman-manager
+exec --no-startup-id franz
 
 assign [class="Google-chrome"] $w2
 assign [class="jetbrains-idea"] $w3
