--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -20,7 +20,7 @@
 ;background = ${xrdb:color0:#222}
 ;background = #222
 background = #2f343f
-background-alt = #676E7D 
+background-alt = #676E7D
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
 foreground-alt = #555
@@ -28,10 +28,10 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/main_bar]
-;monitor = ${env:MONITOR:HDMI-1}
+[bar/single_bar]
+monitor = eDP-1
 width = 100%
-height = 30 
+height = 30
 ;offset-x = 1%
 ;offset-y = 1%
 ;radius = 6.0
@@ -56,11 +56,11 @@ font-0 = MesloLGS Nerd Font:size=12;0
 font-1 = FontAwesome:size=12;0
 
 modules-left =  i3
-modules-center = 
-modules-right = mpd pulseaudio wlan date battery powermenu
+modules-center =
+modules-right = mpd pulseaudio wlan date battery
 
 tray-position = right
-tray-padding = 1 
+tray-padding = 1
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
@@ -77,10 +77,10 @@ scroll-down = i3wm-wsprev
 cursor-click = pointer
 cursor-scroll = pointer
 
-[bar/aux_bar]
-monitor = eDP-1 
+[bar/main_bar]
+monitor = ${env:MONITOR}
 width = 100%
-height = 30 
+height = 30
 ;offset-x = 1%
 ;offset-y = 1%
 ;radius = 6.0
@@ -104,12 +104,12 @@ module-margin-right = 2
 font-0 = MesloLGS Nerd Font:size=12;0
 font-1 = FontAwesome:size=12;0
 
-modules-left = i3
+modules-left =  i3
 modules-center =
-modules-right =
+modules-right = mpd pulseaudio wlan date battery
 
-;tray-position = right
-;tray-padding = 3
+tray-position = right
+tray-padding = 1
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
@@ -124,7 +124,41 @@ scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
 cursor-click = pointer
-cursor-scroll = pointer 
+cursor-scroll = pointer
+
+[bar/aux_bar]
+monitor = ${env:MONITOR}
+width = 100%
+height = 30
+;offset-x = 1%
+;offset-y = 1%
+;radius = 6.0
+fixed-center = false
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+line-color = #f00
+
+padding-left = 0
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 2
+
+font-0 = MesloLGS Nerd Font:size=12;0
+font-1 = FontAwesome:size=12;0
+
+modules-left = i3
+modules-center =
+modules-right =
+
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
+
+cursor-click = pointer
+cursor-scroll = pointer
 
 [module/xwindow]
 ;type = internal/xwindow
@@ -240,7 +274,7 @@ icon-prev = 
 icon-stop = 
 icon-play = 
 icon-pause = 
-icon-next =  
+icon-next = 
 
 label-song-maxlen = 35
 label-song-ellipsis = true
@@ -323,7 +357,7 @@ format-disconnected =
 
 [module/date]
 type = internal/date
-interval = 1 
+interval = 1
 
 date = %d-%m-%Y
 ;date-alt = " %Y-%m-%d"
@@ -331,11 +365,11 @@ date = %d-%m-%Y
 time = " %H:%M"
 ;time-alt = %H:%M:%S
 
-format-prefix =  
+format-prefix = 
 ;format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #ffa000
 
-label = %time%  %date%
+label = %{A3:gsimplecal:}%time%  %date%%{A}
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -348,9 +382,9 @@ format-volume-underline = #ffc107
 label-muted =  muted
 label-muted-foreground = #666
 
-ramp-volume-0 =  
+ramp-volume-0 = 
 ramp-volume-1 = 
-ramp-volume-2 =  
+ramp-volume-2 = 
 
 
 ;bar-volume-width = 10
@@ -414,26 +448,26 @@ format-full-prefix = " "
 ;format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
-ramp-capacity-0 =  
-ramp-capacity-1 =  
-ramp-capacity-2 =  
-ramp-capacity-3 =  
-ramp-capacity-4 =  
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 =  
-animation-charging-1 =  
-animation-charging-2 =  
-animation-charging-3 =  
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
 animation-charging-4 = 
 ;animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
-animation-discharging-0 =  
-animation-discharging-1 =  
+animation-discharging-0 = 
+animation-discharging-1 = 
 animation-discharging-2 = 
 animation-discharging-3 = 
-animation-discharging-4 =  
+animation-discharging-4 = 
 ;animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
@@ -457,35 +491,35 @@ animation-discharging-framerate = 750
 ;ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
-type = custom/menu
+;type = custom/menu
 
-expand-right = true
+;expand-right = true
 
-format-spacing = 1
+;format-spacing = 1
 
-label-open = 
-label-open-foreground = ${colors.foreground}
-label-close =  cancel
-label-close-foreground = ${colors.foreground}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
-label-open-underline = #ff6f00 
-label-close-underline = #ff6f00
+;label-open = 
+;label-open-foreground = ${colors.foreground}
+;label-close =  cancel
+;label-close-foreground = ${colors.foreground}
+;label-separator = |
+;label-separator-foreground = ${colors.foreground-alt}
+;label-open-underline = #ff6f00
+;label-close-underline = #ff6f00
 
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
+;menu-0-0 = reboot
+;menu-0-0-exec = menu-open-1
+;menu-0-1 = power off
+;menu-0-1-exec = menu-open-2
 
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+;menu-1-0 = cancel
+;menu-1-0-exec = menu-open-0
+;menu-1-1 = reboot
+;menu-1-1-exec = sudo reboot
 
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+;menu-2-0 = power off
+;menu-2-0-exec = sudo poweroff
+;menu-2-1 = cancel
+;menu-2-1-exec = menu-open-0
 
 [settings]
 screenchange-reload = true
