--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,7 +36,7 @@ bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun -theme solarized
+bindsym $mod+d exec rofi -show drun -theme base16-gruvbox-dark-soft
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -253,8 +253,9 @@ exec --no-startup-id i3-msg 'workspace $w10; exec urxvt -name "tty-clock" -e tty
 exec --no-startup-id i3-msg 'workspace $w2;'
 exec --no-startup-id xrdb -merge ~/.Xresources
 exec --no-startup-id compton -f
+exec --no-startup-id nm-applet &
+exec --no-startup-id blueman-applet &
 exec --no-startup-id synclient VertScrollDelta=-113 HorizTwoFingerScroll=1
-exec --no-startup-id blueman-manager
 exec --no-startup-id franz
 
 assign [class="Google-chrome"] $w2
