--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -6,7 +6,7 @@ rofi.color-active: argb:2c1d1f21, #65acff, argb:e44b5160, #4491ed, #f9f9f9
 rofi.width: 50
 rofi.lines: 5
 rofi.columns: 1
-rofi.font: System San Francisco Display 18
+rofi.font: SFNS Display 18
 rofi.bw: 0
 rofi.padding: 400
 rofi.eh: 1
