--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -52,8 +52,8 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = MesloLGS Nerd Font:size=12;0
-font-1 = FontAwesome:size=12;0
+font-0 = Furacode Nerd Font Mono:style=Medium:size=14;0
+;font-1 = FontAwesome:size=12;0
 
 modules-left =  i3
 modules-center =
@@ -101,8 +101,10 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = MesloLGS Nerd Font:size=12;0
-font-1 = FontAwesome:size=12;0
+
+font-0 = Furacode Nerd Font Mono:style=Medium:size=14;0
+;font-0 = MesloLGS Nerd Font:size=12;0
+;font-1 = FontAwesome:size=12;0
 
 modules-left =  i3
 modules-center =
@@ -147,8 +149,10 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = MesloLGS Nerd Font:size=12;0
-font-1 = FontAwesome:size=12;0
+
+font-0 = Furacode Nerd Font Mono:style=Medium:size=14;0
+;font-0 = MesloLGS Nerd Font:size=12;0
+;font-1 = FontAwesome:size=12;0
 
 modules-left = i3
 modules-center =
