--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -52,7 +52,7 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Furacode Nerd Font Mono:style=Medium:size=14;0
+font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
 ;font-1 = FontAwesome:size=12;0
 
 modules-left =  i3
@@ -102,7 +102,7 @@ module-margin-left = 1
 module-margin-right = 1
 
 
-font-0 = Furacode Nerd Font Mono:style=Medium:size=14;0
+font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
 ;font-0 = MesloLGS Nerd Font:size=12;0
 ;font-1 = FontAwesome:size=12;0
 
@@ -150,7 +150,7 @@ module-margin-left = 1
 module-margin-right = 1
 
 
-font-0 = Furacode Nerd Font Mono:style=Medium:size=14;0
+font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
 ;font-0 = MesloLGS Nerd Font:size=12;0
 ;font-1 = FontAwesome:size=12;0
 
