--- a/.config/i3/config
+++ b/.config/i3/config
@@ -174,6 +174,18 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+set $mode_screenshot screenshot (f) full, (s) select
+mode "$mode_screenshot" {
+  bindsym --release f exec --no-startup-id scrot '%Y-%m-%d_%H%M%S_$wx$h.png' -d 1, mode "default"
+  bindsym --release s exec --no-startup-id scrot -s '%Y-%m-%d_%H%M%S_$wx$h.png', mode "default"
+
+  # back to normal: Enter or Escape
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+
+bindsym $mod+p mode "$mode_screenshot"
+
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
   bindsym l exec --no-startup-id ~/.config/i3/i3exit lock, mode "default"
