--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,16 +1,26 @@
-rofi.modi: drun,run
-rofi.color-window: argb:c82d303b, #7c8389, #1d1f21
-rofi.color-normal: argb:2c1d1f21, #c4cbd4, argb:96404552, #4084d6, #f9f9f9
-rofi.color-urgent: argb:2c1d1f21, #cc6666, argb:e54b5160, #a54242, #f9f9f9
-rofi.color-active: argb:2c1d1f21, #65acff, argb:e44b5160, #4491ed, #f9f9f9
-rofi.width: 50
+rofi.modi: drun,run,window
+!rofi.color-window: argb:c82d303b, #7c8389, #1d1f21
+!rofi.color-normal: argb:2c1d1f21, #c4cbd4, argb:96404552, #4084d6, #f9f9f9
+!rofi.color-urgent: argb:2c1d1f21, #cc6666, argb:e54b5160, #a54242, #f9f9f9
+!rofi.color-active: argb:2c1d1f21, #65acff, argb:e44b5160, #4491ed, #f9f9f9
+rofi.width: 40
 rofi.lines: 5
 rofi.columns: 1
 rofi.font: SFNS Display 18
 rofi.bw: 0
-rofi.padding: 400
+rofi.padding: 20
 rofi.eh: 1
 !rofi.separator-style: solid
 rofi.hide-scrollbar: true
 rofi.fullscreen: false
 rofi.terminal: urxvt
+! vim: filetype=yaml
+! rofi template
+! Base16 Solarized Light, by Ethan Schoonover (http://ethanschoonover.com/solarized)
+
+! State:           'bg',    'fg',    'bgalt', 'hlbg',  'hlfg'
+rofi.color-normal: #fdf6e3, #586e75, #fdf6e3, #586e75, #fdf6e3
+rofi.color-urgent: #fdf6e3, #dc322f, #fdf6e3, #dc322f, #fdf6e3
+rofi.color-active: #fdf6e3, #268bd2, #fdf6e3, #268bd2, #fdf6e3
+!                  'bg',    'border'
+rofi.color-window: #fdf6e3, #586e75
