--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -57,6 +57,7 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
+font-1 = TakaoPGothic:style=Regular:size=12;0
 ;font-1 = FontAwesome:size=12;0
 
 modules-left =  i3
@@ -105,8 +106,8 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-
 font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
+font-1 = TakaoPGothic:style=Regular:size=12;0
 ;font-0 = MesloLGS Nerd Font:size=12;0
 ;font-1 = FontAwesome:size=12;0
 
@@ -155,6 +156,7 @@ module-margin-right = 1
 
 
 font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
+font-1 = TakaoPGothic:style=Regular:size=12;0
 ;font-0 = MesloLGS Nerd Font:size=12;0
 ;font-1 = FontAwesome:size=12;0
 
@@ -275,7 +277,7 @@ ws-icon-default =
 
 [module/mpd_scroll]
 type = custom/script
-exec = $HOME/.config/polybar/mpd_scroll.sh 
+exec = $HOME/.config/polybar/mpd_scroll.sh
 tail = true
 
 [module/mpd]
@@ -287,7 +289,7 @@ icon-prev = 
 icon-stop = 
 icon-play = 
 icon-pause = 
-icon-next =  
+icon-next = 
 
 label-song-maxlen = 35
 label-song-ellipsis = true
