--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -56,7 +56,7 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
+font-0 = Hack Nerd Font:style=Regular:size=12;0
 font-1 = TakaoPGothic:style=Regular:size=12;0
 ;font-1 = FontAwesome:size=12;0
 
@@ -106,7 +106,7 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
+font-0 = Hack Nerd Font:style=Regular:size=12;0
 font-1 = TakaoPGothic:style=Regular:size=12;0
 ;font-0 = MesloLGS Nerd Font:size=12;0
 ;font-1 = FontAwesome:size=12;0
@@ -155,7 +155,7 @@ module-margin-left = 1
 module-margin-right = 1
 
 
-font-0 = DejaVuSansMono Nerd Font Mono:style=Book:size=12;0
+font-0 = Hack Nerd Font:style=Regular:size=12;0
 font-1 = TakaoPGothic:style=Regular:size=12;0
 ;font-0 = MesloLGS Nerd Font:size=12;0
 ;font-1 = FontAwesome:size=12;0
