--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: SNFS Display 10
+font pango: Hack 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -251,6 +251,7 @@ for_window [class="Pavucontrol"] floating enable
 for_window [class="xpad"] floating enable
 for_window [class="Gnome-power-statistics"] floating enable
 for_window [class="Blueman-manager"] floating enable
+for_window [class="Pidgin"] floating enable
 for_window [class="jetbrains-idea"] layout tabbed
 for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down 30 px
 
