alterando a fonte do terminal e removendo os symbol_maps (para usar os simbolos da Hack Nerd Font)

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,9 +6,9 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Hack Regular 
+font_family      Hack Regular
 bold_font        Hack Bold
-italic_font      Hack Italic
+italic_font      Hack Italic 
 bold_italic_font Hack Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
@@ -23,7 +23,7 @@ bold_italic_font Hack Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16
+font_size 12
 
 #: Font size (in pts)
 
@@ -37,7 +37,7 @@ adjust_column_width 0
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3,U+F015,U+F70c,U+F113,U+F126,U+F06A,U+F07C,U+F1D3,U+F059,U+F055,U+F01A,U+F01B FontAwesome 
+# symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3,U+F015,U+F70c,U+F113,U+F126,U+F06A,U+F07C,U+F1D3,U+F059,U+F055,U+F01A,U+F01B FontAwesome 
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
