--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -33,7 +33,7 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/single_bar]
-monitor = eDP-1
+monitor = ${env:MONITOR} 
 width = 100%
 height = 30
 ;offset-x = 1%
@@ -57,8 +57,8 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = Hack Nerd Font:style=Regular:size=12;0
-font-1 = TakaoPGothic:style=Regular:size=12;0
-;font-1 = FontAwesome:size=12;0
+font-1 = FontAwesome:size=12;0
+font-2 = TakaoPGothic:style=Regular:size=12;0
 
 modules-left =  i3
 modules-center =
@@ -107,9 +107,8 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = Hack Nerd Font:style=Regular:size=12;0
-font-1 = TakaoPGothic:style=Regular:size=12;0
-;font-0 = MesloLGS Nerd Font:size=12;0
-;font-1 = FontAwesome:size=12;0
+font-1 = FontAwesome:size=12;0
+font-2 = TakaoPGothic:style=Regular:size=12;0
 
 modules-left =  i3
 modules-center =
@@ -154,11 +153,9 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-
 font-0 = Hack Nerd Font:style=Regular:size=12;0
-font-1 = TakaoPGothic:style=Regular:size=12;0
-;font-0 = MesloLGS Nerd Font:size=12;0
-;font-1 = FontAwesome:size=12;0
+font-1 = FontAwesome:size=12;0
+font-2 = TakaoPGothic:style=Regular:size=12;0
 
 modules-left = i3
 modules-center =
@@ -206,7 +203,7 @@ type = internal/bspwm
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
-label-focused-padding = 1
+label-focused-padding = 1 
 
 label-occupied = %index%
 label-occupied-padding = 1
@@ -231,7 +228,7 @@ enable-scroll = true
 
 ; Only show workspaces on the same output as the bar
 pin-workspaces = true
-label-mode-padding = 2
+label-mode-padding = 2 
 label-mode-foreground = ${colors.foreground}
 label-mode-background = ${colors.background}
 
@@ -240,7 +237,7 @@ label-focused = %name%: %icon%
 label-focused-background = ${module/bspwm.label-focused-background}
 label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
-label-focused-font = 2
+label-focused-font = 2 
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %name%: %icon%
