--- a/.config/i3/config
+++ b/.config/i3/config
@@ -267,6 +267,7 @@ for_window [class="xpad"] floating enable
 for_window [class="Gnome-power-statistics"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [class="Pidgin"] floating enable
+for_window [class="Conky"] floating enable
 for_window [class="jetbrains-idea"] layout tabbed
 for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down 30 px
 
@@ -281,6 +282,7 @@ exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "cava" -e cava'
 exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "ncmpcpp" -e ncmpcpp -s playlist'
 exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "tty-clock" -e tty-clock -c'
 exec --no-startup-id i3-msg 'workspace $w2;'
+exec --no-startup-id xfce4-power-manager
 exec --no-startup-id compton -f
 exec --no-startup-id nm-applet &
 exec --no-startup-id blueman-applet &
