--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 
 font_family      Hack Regular
 bold_font        Hack Bold
-italic_font      Hack Italic 
+italic_font      Hack Italic
 bold_italic_font Hack Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
@@ -37,7 +37,7 @@ adjust_column_width 0
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-# symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3,U+F015,U+F70c,U+F113,U+F126,U+F06A,U+F07C,U+F1D3,U+F059,U+F055,U+F01A,U+F01B FontAwesome 
+# symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3,U+F015,U+F70c,U+F113,U+F126,U+F06A,U+F07C,U+F1D3,U+F059,U+F055,U+F01A,U+F01B FontAwesome
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
@@ -354,7 +354,7 @@ inactive_text_alpha 1.0
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations yes 
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders). Whether
 #: this works and exactly what effect it has depends on the window
@@ -487,39 +487,47 @@ selection_background #fffacd
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-# Base16 Solarized Light - kitty color config
-# Ethan Schoonover (modified by aramisgithub)
-background #fdf6e3
-foreground #586e75
-selection_background #586e75
-selection_foreground #fdf6e3
-url_color #657b83
-cursor #586e75
-active_border_color #839496
-active_tab_background #fdf6e3
-active_tab_foreground #586e75
-inactive_tab_background #eee8d5
-inactive_tab_foreground #657b83
+# Base16 Gruvbox dark, soft - kitty color config
+# Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
+background #32302f
+foreground #d5c4a1
+selection_background #d5c4a1
+selection_foreground #32302f
+url_color #bdae93
+cursor #d5c4a1
+active_border_color #665c54
+active_tab_background #32302f
+active_tab_foreground #d5c4a1
+inactive_tab_background #3c3836
+inactive_tab_foreground #bdae93
 
 # normal
-color0 #fdf6e3
-color1 #dc322f
-color2 #859900
-color3 #b58900
-color4 #268bd2
-color5 #6c71c4
-color6 #2aa198
-color7 #586e75
+color0 #32302f
+color1 #fb4934
+color2 #b8bb26
+color3 #fabd2f
+color4 #83a598
+color5 #d3869b
+color6 #8ec07c
+color7 #d5c4a1
 
 # bright
-color8 #839496
-color9 #cb4b16
-color10 #eee8d5
-color11 #93a1a1
-color12 #657b83
-color13 #073642
-color14 #d33682
-color15 #586e75
+color8 #665c54
+color9 #fb4934
+color10 #b8bb26
+color11 #fabd2f
+color12 #83a598
+color13 #d3869b
+color14 #8ec07c
+color15 #d5c4a1
+
+# extended base16 colors
+color16 #fe8019
+color17 #d65d0e
+color18 #3c3836
+color19 #504945
+color20 #bdae93
+color21 #ebdbb2
 
 #: Advanced {{{
 
@@ -557,7 +565,7 @@ allow_remote_control no
 #: content of windows, etc. Note that this even works over ssh
 #: connections.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
