--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,26 +1,47 @@
 rofi.modi: drun,run,window
-!rofi.color-window: argb:c82d303b, #7c8389, #1d1f21
-!rofi.color-normal: argb:2c1d1f21, #c4cbd4, argb:96404552, #4084d6, #f9f9f9
-!rofi.color-urgent: argb:2c1d1f21, #cc6666, argb:e54b5160, #a54242, #f9f9f9
-!rofi.color-active: argb:2c1d1f21, #65acff, argb:e44b5160, #4491ed, #f9f9f9
 rofi.width: 40
 rofi.lines: 5
 rofi.columns: 1
-rofi.font: SFNS Display 18
+rofi.font: Noto Sans 18
 rofi.bw: 0
 rofi.padding: 20
 rofi.eh: 1
 !rofi.separator-style: solid
 rofi.hide-scrollbar: true
 rofi.fullscreen: false
-rofi.terminal: urxvt
+rofi.terminal: kitty
 ! vim: filetype=yaml
 ! rofi template
-! Base16 Solarized Light, by Ethan Schoonover (http://ethanschoonover.com/solarized)
 
-! State:           'bg',    'fg',    'bgalt', 'hlbg',  'hlfg'
-rofi.color-normal: #fdf6e3, #586e75, #fdf6e3, #586e75, #fdf6e3
-rofi.color-urgent: #fdf6e3, #dc322f, #fdf6e3, #dc322f, #fdf6e3
-rofi.color-active: #fdf6e3, #268bd2, #fdf6e3, #268bd2, #fdf6e3
-!                  'bg',    'border'
-rofi.color-window: #fdf6e3, #586e75
+! Base16 Gruvbox dark, soft
+! Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
+
+! base00: #32302f
+! base01: #3c3836
+! base02: #504945
+! base03: #665c54
+! base04: #bdae93
+! base05: #d5c4a1
+! base06: #ebdbb2
+! base07: #fbf1c7
+! base08: #fb4934
+! base09: #fe8019
+! base0A: #fabd2f
+! base0B: #b8bb26
+! base0C: #8ec07c
+! base0D: #83a598
+! base0E: #d3869b
+! base0F: #d65d0e
+
+! Enable the extended coloring options
+rofi.color-enabled: true
+
+! Property Name     BG       Border   Separator
+rofi.color-window:  #3c3836, #3c3836, #32302f
+
+! Property Name     BG       FG       BG-alt   Head-BG  Head-FG
+rofi.color-normal:  #3c3836, #d5c4a1, #3c3836, #3c3836, #fbf1c7
+rofi.color-active:  #3c3836, #83a598, #3c3836, #3c3836, #83a598
+rofi.color-urgent:  #3c3836, #fb4934, #3c3836, #3c3836, #fb4934
+
+
