--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -19,7 +19,7 @@
 [colors]
 background = #32302f
 background-alt = #3c3836 
-foreground = #504945
+foreground = #fabd2f
 foreground-alt = #bdae93
 primary = #83a598 
 secondary = #e60053
