ajuste para inicializar o mopidy junto com o i3 - wip

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -279,8 +279,8 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 exec --no-startup-id i3-msg 'workspace $w10; append_layout ~/.config/i3/w10.json'
 exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "cava" -e cava'
-exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "ncmpcpp" -e ncmpcpp -s playlist'
-exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "tty-clock" -e tty-clock -c'
+exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "ncmpcpp" -e ncmpcpp -s playlist -S search_engine'
+exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "tty-clock" -e tty-clock -c -C 3'
 exec --no-startup-id i3-msg 'workspace $w2;'
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id compton -f
@@ -288,6 +288,8 @@ exec --no-startup-id nm-applet &
 exec --no-startup-id blueman-applet &
 exec --no-startup-id franz
 
+exec --no-startup-id i3-msg 'exec kitty -e nohup mopidy;sleep 5'
+exec --no-startup-id i3-msg 'exec kitty -e bum --size 370'
 assign [class="Google-chrome"] $w2
 assign [class="jetbrains-idea"] $w3
 assign [class="jetbrains-datagrip"] $w5
