incluindo config para o conky com o tema solarized

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -17,6 +17,7 @@ shadow-exclude = [
  #"n:e:Notification",
  "i:e:i3bar",
  "i:e:i3-frame",
+ "n:e:Conky",
  "n:e:Franz",
  "n:e:Plank",
  "n:e:Docky",
