--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -270,7 +270,7 @@ song_columns_list_format = "(10)[black]{l} (30)[blue]{a} (30)[green]{b} (30)[mag
 ## Note: Custom command that will be executed each time song changes. Useful for
 ## notifications etc.
 ##
-#execute_on_song_change = ""
+execute_on_song_change = "mpdnotify"
 #
 ##
 ## Note: Custom command that will be executed each time player state
