ajustando o script de inicialização do mopidy

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -247,6 +247,7 @@ mode "$mode_media" {
 }
 
 bindsym $mod+m mode "$mode_media"
+bindsym $mod+Shift+m exec --no-startup-id ~/mopidy/launch.sh
 
 bindsym $mod+Tab workspace back_and_forth
 
@@ -270,8 +271,6 @@ for_window [class="Pidgin"] floating enable
 for_window [class="Conky"] floating enable
 for_window [class="jetbrains-idea"] layout tabbed
 for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down 30 px
-for_window [instance="^mopidy"] move scratchpad
-for_window [instance="^bum"] move strachpad
 
 exec_always --no-startup-id setxkbmap -rules evdev -model pc105 -layout us -variant intl
 exec_always --no-startup-id synclient TapButton1=1 TapButton2=3 VertScrollDelta=-113 HorizTwoFingerScroll=1
@@ -288,8 +287,6 @@ exec --no-startup-id i3-msg 'workspace $w10; append_layout ~/.config/i3/w10.json
 exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "cava" -e cava'
 exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "ncmpcpp" -e ncmpcpp -s playlist -S search_engine'
 exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "tty-clock" -e tty-clock -c -C 3'
-exec --no-startup-id i3-mdg 'exec kitty --name "mopidy" -e mopidy'
-exec --no-startup-id i3-msg 'exec kitty --name "bum" -e bum'
 exec --no-startup-id i3-msg 'workspace $w2;'
 
 assign [class="Google-chrome"] $w2
