--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -276,7 +276,7 @@ full-at = 98
 format-charging = <animation-charging> <label-charging>
 ;format-charging-underline = #ff8f00
 
-format-discharging = <animation-discharging> <label-discharging>
+format-discharging = <ramp-capacity> <label-discharging>
 ;format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = " "
@@ -288,7 +288,7 @@ ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
+;ramp-capacity-foreground = ${colors.foreground-alt}
 
 animation-charging-0 = 
 animation-charging-1 = 
@@ -303,7 +303,7 @@ animation-discharging-1 = 
 animation-discharging-2 = 
 animation-discharging-3 = 
 animation-discharging-4 = 
-;animation-discharging-foreground = ${colors.foreground-alt}
+.;animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
 [settings]
