--- a/.config/cava/config
+++ b/.config/cava/config
@@ -104,8 +104,8 @@
 # not able to restore color definitions on exit, simply restart your terminal to restore colors.
  gradient = 1
  gradient_count = 2
- gradient_color_1 = '#0099ff'
- gradient_color_2 = '#ff3399'
+ gradient_color_1 = '#fabd2f'
+ gradient_color_2 = '#fe8019'
 
 
 
