--- a/.config/i3/config
+++ b/.config/i3/config
@@ -67,7 +67,7 @@ bindsym $mod+Return exec kitty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun
+bindsym $mod+d exec rofi -show drun -display-drun ""
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -262,21 +262,30 @@ bindsym XF86AudioNext exec mpc next
 bindsym XF86AudioPrev exec mpc prev
 
 for_window [class="^.*"] border pixel 1
-for_window [class="zoom"] floating enable
-for_window [class="Pavucontrol"] floating enable
-for_window [class="xpad"] floating enable
+
+for_window [window_role="pop-up"]           floating enable
+for_window [window_role="bubble"]           floating enable
+for_window [window_role="task_dialog"]      floating enable
+for_window [window_role="Preferences"]      floating enable
+for_window [window_type="dialog"]           floating enable
+for_window [window_type="menu"]             floating enable
+
+for_window [class="zoom"]                   floating enable
+for_window [class="Pavucontrol"]            floating enable
+for_window [class="xpad"]                   floating enable
 for_window [class="Gnome-power-statistics"] floating enable
-for_window [class="Blueman-manager"] floating enable
-for_window [class="Pidgin"] floating enable
-for_window [class="Conky"] floating enable
+for_window [class="Blueman-manager"]        floating enable
+for_window [class="Pidgin"]                 floating enable
+for_window [class="Conky"]                  floating enable
+
 for_window [class="jetbrains-idea"] layout tabbed
 for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down 30 px
 
-assign [class="Google-chrome"] $w2
-assign [class="jetbrains-idea"] $w3
+assign [class="Google-chrome"]      $w2
+assign [class="jetbrains-idea"]     $w3
 assign [class="jetbrains-datagrip"] $w5
-assign [class="Franz"] $w1
-assign [class="mpv"] $w10
+assign [class="Franz"]              $w1
+assign [class="mpv"]                $w10
 
 exec_always --no-startup-id setxkbmap -rules evdev -model pc105 -layout us -variant intl
 exec_always --no-startup-id synclient TapButton1=1 TapButton2=3 VertScrollDelta=-113 HorizTwoFingerScroll=1
