removendo shadow do xpad - via compton

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -26,8 +26,13 @@ shadow-exclude = [
  "class_g ?= 'Notify-osd'",
  "class_g ?= 'Cairo-dock'",
  "class_g ?= 'Xfce4-notifyd'",
- "class_g ?= 'Xfce4-power-manager'"
+ "class_g ?= 'Xfce4-power-manager'",
+ "class_g ?= 'xpad'"
 ];
+
+#inactive-dim-exclude = [
+# "class_g ?= 'xpad'"
+#];
 
 wintypes:
 {
