removing invalid character in the polybar config

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -303,7 +303,7 @@ animation-discharging-1 = 
 animation-discharging-2 = 
 animation-discharging-3 = 
 animation-discharging-4 = 
-.;animation-discharging-foreground = ${colors.foreground-alt}
+;animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
 [settings]
