--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -9,7 +9,7 @@ rofi.eh: 1
 !rofi.separator-style: solid
 rofi.hide-scrollbar: true
 rofi.fullscreen: false
-rofi.terminal: kitty
+rofi.terminal: alacritty
 ! vim: filetype=yaml
 ! rofi template
 
