--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,3 @@
-set -g default-terminal "xterm-kitty"
+set -g default-terminal "alacritty"
 set -g pane-active-border-style fg=black,bg=black
 set -g pane-border-style fg=black,bg=black
